Scroll blocked in Root - use "h-svh overflow-y-scroll" in scroll required pages root div element - don't set overflow-y in root or body because we have some fixed layouts

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ body {
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: clip;
   line-height: 1.5;
   font-size: 1.6rem;
   scrollbar-width: thin;
